# gourmet-be

./: README.md  pyproject.toml
gourmet_be/: main.py
gourmet_be/db/: db.py
gourmet_be/endpoints/: recipes.py
gourmet_be/models/: recipes.py
gourmet_be/static_data/: fetcher.py  recipe_cc11f617-8265-4f5e-a7cb-dfa443b7d210.json  recipe_ef8612a0-9121-4c03-9ebd-01cbbb76222b.json
